# pake

./: pyproject.toml
pake/: __init__.py  cli.py  core.py
tests/: test.py
