
[tool.poetry]
name = "pake-cli"
version = "0.1.0"
description = "A Python job runner for every occaision."
authors = ["Peter Li <peterlimail47@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
python pake/core.py = 'entry:main'
